# tauri-solid-tailwind-shadcn

./: .gitignore  LICENSE  README.md  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: Footer.tsx  Header.tsx  Link.tsx  Main.tsx  TopMenuBar.tsx
src/components/theme/: ThemeProvider.tsx
